--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <!-- Portfolio Section -->
   
-  <h3>Portfolio</h3>
+  <h3 id="portfolio">Portfolio</h3>
 
   <section>
 
@@ -78,7 +78,6 @@
           <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
           </div>
 
-        </div>
   </section>
 
 <!-- Footer -->
